--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- navbar -->
   <nav>
     <!-- logo -->
-    <div class="container">
+    <div class="container " style="margin-top: 20px;">
       <img src="./images/logo.35bb8e1d9b5745af32ff148cbee51dfa.svg" alt="">
     </div>
   </nav>
